Completed Pandas Tutorial
Added Index, added some consistency in documentation.

--- a/Pandas/DataFrames-2.ipynb
+++ b/Pandas/DataFrames-2.ipynb
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Passing in booldf to df, you can see the resulting DataFrame where the condition holds true"
+    "Passing in *booldf* to **df**, you can see the resulting DataFrame where the condition holds true"
    ]
   },
   {
@@ -707,7 +707,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Assume we would like the condition where W > 0 and Y > 1"
+    "Assume we would like the condition where `W > 0` and `Y > 1`"
    ]
   },
   {
@@ -804,7 +804,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that Python's \"and\" operator does not work for Series.\n",
+    "Note that Python's `and` operator does not work for Series.\n",
     "The ampersand must be used."
    ]
   },
@@ -870,7 +870,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly, \"or\" does not work. The pipe must be used."
+    "Similarly, `or` does not work. The pipe must be used."
    ]
   },
   {
@@ -1310,7 +1310,7 @@
    "source": [
     "Note, these changes do not apply to the original matrix.\n",
     "\n",
-    "Use *.set_index(keys, inplace=True)* to change **df** directly."
+    "Use `.set_index(keys, inplace=True)` to change **df** directly."
    ]
   },
   {
@@ -1509,13 +1509,6 @@
     "df.set_index('States', inplace=True)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
