Moved Copying explanation to bottom
If I'm going through trying to read as a 'cheat sheet', I want to see
how to do it at the top of the section, not at the bottom. While great
for learning, I don't want a demonstration of the wrong way to do it first.

--- a/NumPy/NumPy Indexing and Selection.ipynb
+++ b/NumPy/NumPy Indexing and Selection.ipynb
@@ -201,6 +201,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "If we are interested in copying an array, we must use the copy() method."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([99, 99, 99, 99, 99, 99,  6,  7,  8,  9, 10])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_copy = arr.copy()\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr_copy[:] = 100\n",
+    "arr_copy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Why? Let's try creating a copy without .copy()**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Creating a slice of an array does not make a copy. It becomes a pointer to that slice of the original array."
    ]
   },
@@ -286,62 +349,6 @@
    ],
    "source": [
     "arr"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "***"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we are interested in copying an array, we must use the copy() method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([99, 99, 99, 99, 99, 99,  6,  7,  8,  9, 10])"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr_copy = arr.copy()\n",
-    "arr"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([100, 100, 100, 100, 100, 100, 100, 100, 100, 100, 100])"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "arr_copy[:] = 100\n",
-    "arr_copy"
    ]
   },
   {
@@ -750,13 +757,6 @@
    "source": [
     "arr_2d[3:5,0:2]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
