--- a/Data Visualization/Geographical Plotting/Choropleth Maps.ipynb
+++ b/Data Visualization/Geographical Plotting/Choropleth Maps.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.plotly as py\n",
+    "import chart_studio.plotly as py\n",
     "import plotly.graph_objs as go \n",
     "from plotly.offline import download_plotlyjs, init_notebook_mode, plot, iplot"
    ]
@@ -1591,7 +1591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
